force-app/main/default/objects/Error_Login__c/Error_Login__c.object-meta.xml
<CustomObject>
    <label>Error Login</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Login Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>