force-app/main/default/objects/Error_Login__c/fields/Error_Cause__c.field-meta.xml
<CustomField>
    <fullName>Error_Cause__c</fullName>
    <label>Error Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>