force-app/main/default/objects/Error_Login__c/fields/Error_LineNumber__c.field-meta.xml
<CustomField>
    <fullName>Error_LineNumber__c</fullName>
    <label>Error LineNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>