force-app/main/default/objects/Error_Login__c/fields/Error_StackTraceString__c.field-meta.xml
<CustomField>
    <fullName>Error_StackTraceString__c</fullName>
    <label>Error StackTraceString</label>
    <type>TextArea</type>
</CustomField>