force-app/main/default/objects/Error_Login__c/fields/Error_TypeName__c.field-meta.xml
<CustomField>
    <fullName>Error_TypeName__c</fullName>
    <label>Error TypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>